# zkiot-app

./: README.md
backend/M5stackcore2/: platformio.ini
backend/M5stackcore2/src/: certs.h  main.cpp
backend/zk-Circuit/: package-lock.json  package.json
backend/zk-Circuit/circuits/: temp_all_leq37_only.circom
backend/zk-Circuit/data/: input.json  readings_37.json
backend/zk-Circuit/scripts/: build_input.ts  run_zk.sh
frontend/: amplify.yml  next.config.js  package-lock.json  package.json
frontend/public/artifacts/: proof.json  verification_key.json
frontend/src/app/: page.tsx
frontend/src/types/: snarkjs.d.ts
project/Anons-with-Amperes/: README.md  package-lock.json  package.json  proof_of_charge.r1cs  proof_of_charge.sym
project/Anons-with-Amperes/circuits/: proof_of_charge.circom  proof_of_charge.circomZone.Identifier
project/Anons-with-Amperes/data/: charge_point_sample.json  charge_point_sample.jsonZone.Identifier  input.json
project/Anons-with-Amperes/proof_of_charge_js/: proof_of_charge.wasm
project/Anons-with-Amperes/scripts/: build_proof_of_charge.sh  build_proof_of_charge.shZone.Identifier  (+2 more)
project/Arcium_MPC/: Anchor.toml  Arcium.toml  Cargo.toml  README.md  package.json  program-keypair-devnet.json
project/Arcium_MPC/programs/zkiot_mpc/: Cargo.toml  zkmpc-keypair.json
project/Arcium_MPC/programs/zkiot_mpc/src/: lib.rs
project/Docomo-Attestation/: README.md
project/MagicBlock_ER/: README.md
project/MagicBlock_ER/iaq_er/programs/iaq_er/: Cargo.toml
project/MagicBlock_ER/iaq_er/programs/iaq_er/src/: lib.rs
(+54 files in other folders)
